# DocMind

./: .gitignore  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  render.yaml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  billing.py  conversations.py  documents.py  invites.py  orgs.py  webhooks.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  seed.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: c59a5ea0cc68_initial_schema.py  d60a6eb1dd79_add_indexes.py
backend/app/db/models/: __init__.py  api_key.py  billing.py  chunk.py  conversation.py  document.py  organization.py  usage.py  user.py  webhook.py
backend/app/services/billing/: __init__.py  billing_service.py
backend/app/services/embeddings/: __init__.py  embeddings.py
backend/app/services/ingestion/: __init__.py  splitter.py
backend/app/services/llm/: __init__.py  llm.py
backend/app/services/retrieval/: __init__.py  retrieval.py
backend/app/services/storage/: __init__.py  local.py
backend/app/services/webhooks/: dispatcher.py
backend/tests/integration/: test_invites_flow.py
backend/tests/unit/: test_retrieval_rrf.py  test_splitter.py
docker/: docker-compose.yml  init.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/lib/: streaming.ts
railway/: backend.toml  frontend.toml  worker.toml
(+14 files in other folders)
