[project]
name = "documind-backend"
version = "0.1.0"
requires-python = ">=3.11"
description = "Enterprise RAG Knowledge Base Engine"
readme = "README.md"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pgvector==0.3.2",
    "redis[hiredis]==5.1.0",
    "arq==0.26.1",
    "bcrypt==4.2.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.1",
    "openai==1.51.0",
    "google-generativeai==0.8.2",
    "pypdf==4.3.1",
    "httpx==0.27.2",
    "stripe==10.12.0",
    "sendgrid==6.11.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",
    "tiktoken==0.8.0",
    "python-slugify==8.0.4",
    "structlog==24.4.0",
    "sentry-sdk[fastapi]==2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "factory-boy==3.3.1",
    "faker==30.3.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-q"]
markers = [
    "unit: pure unit tests",
    "integration: tests requiring DB/Redis",
    "slow: tests taking > 1 second",
]

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*"]

[tool.setuptools]
packages = ["app"]
